// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/molecules/PopupMenuList.vue snapshot default 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <!--v-if-->
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        <p>
          item1
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        <p>
          item2
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        <p>
          item3
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot focused item 1`] = `
<div
  class="popup-menu-list-wrapper"
  style="transform: translateY(-26px);"
>
  <!--v-if-->
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        <p>
          item1
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        <p>
          item2
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        <p>
          item3
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot with children 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <!--v-if-->
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        <p>
          item1
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        <p>
          item2
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        <p>
          item3
        </p>
        <svg
          class="right-arrow"
          transform="rotate(90) scale(1, 1)"
          viewBox="0 0 10 10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            class="fill-background-second"
            height="10"
            stroke="none"
            width="10"
          />
          <path
            class="fill-background"
            d="M2 7L8 7L5 2z"
            stroke="none"
            stroke-linejoin="round"
          />
        </svg>
      </button>
      <div
        class="popup-menu-list-wrapper children"
        style="top: 51px;"
      >
        <!--v-if-->
        <ul>
          
          <li>
            <button
              data-test-id="child1"
              type="button"
            >
              <p>
                child1
              </p>
              <!--v-if-->
            </button>
            <!--v-if-->
          </li>
          <li>
            <button
              data-test-id="child2"
              type="button"
            >
              <p>
                child2
              </p>
              <!--v-if-->
            </button>
            <!--v-if-->
          </li>
          
        </ul>
      </div>
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot with search field keyword hits nothing 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <div
    class="keyword-block"
  >
    <div
      class="input-wrapper"
    >
      <input
        data-keep-focus="true"
        type="text"
      />
      <!--v-if-->
    </div>
  </div>
  <div
    class="not-found"
  >
    <p>
      Not found
    </p>
  </div>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot with search field keyword hits something 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <div
    class="keyword-block"
  >
    <div
      class="input-wrapper"
    >
      <input
        data-keep-focus="true"
        type="text"
      />
      <!--v-if-->
    </div>
  </div>
  <ul>
    
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        <p>
          
          <span
            class=""
          >
            ite
          </span>
          <span
            class="hit"
          >
            m2
          </span>
          
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot with search field keyword is empty 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <div
    class="keyword-block"
  >
    <div
      class="input-wrapper"
    >
      <input
        data-keep-focus="true"
        type="text"
      />
      <!--v-if-->
    </div>
  </div>
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        <p>
          item1
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        <p>
          item2
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        <p>
          item3
        </p>
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;
